refactor(doc): 优化 OpenApi 处理器及配置类结构
- 统一补充文档注释，明确作者及创建时间
- 调整 Optional 参数传递方式，避免重复包装和调用
- 精简 OpenApiHandler 类成员变量，移除未使用字段
- 改进标签处理逻辑，增强 javadoc 标签支持
- 优化字符串及集合操作，提升代码简洁性和可读性
- 优化上下文路径处理代码，简化条件判断
- 修复部分代码格式和多余空行问题